# deezzy

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build_gcc.sh  build_rpi_gcc6.sh
cmake/: FindDeezer.cmake  targetarch.cmake
docker/: Dockerfile  build.sh  configure-deezzymage.sh  run.sh
src/: CMakeLists.txt  Deezzy.qml  DeezzyApp.h  Deezzy_480_320.qml  SliderBar.qml  deezer_wrapper.cpp  deezer_wrapper.h  deezzy.qrc  main.cpp
src/deezer_wrapper/: deezer_wrapper.cpp  deezer_wrapper.h
src/deezer_wrapper/private/: private_user.h
tests/: CMakeLists.txt  main.cpp
